<resources>
	<!-- app name and navigation "pre-made" stuff -->
	<string name="app_name" translatable="false">Rubik Cube</string>
	<string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
	<string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
	<string name="nav_header_title" translatable="false">Rubik Cube</string>
	<string name="nav_header_subtitle" translatable="false">
		Libera Longo\nlibera.longo@studio.unibo.it
	</string>
	<string name="nav_header_desc" translatable="false">Navigation header</string>
	<string name="actionbar" translatable="false">actionbar</string>

	<!-- navigation names -->

	<string name="menu_home">Home</string>
	<string name="menu_help">Help</string>
	<string name="menu_visualize">Visualize Algorithm</string>
	<string name="menu_write">Write Algorithm (TXT)</string>
	<string name="menu_import">Import Algorithm</string>
	<string name="menu_send">Send and receive stuff</string>
	<string name="menu_color">Change Colors</string>

	<string name="write_hint">Write here</string>
	<string name="copy_here_hint">Copy here then press one of\"receive …\" buttons</string>

	<!-- save and load stuff -->
	<string name="cube_save">Save</string>
	<string name="cube_load">Load</string>
	<string name="algorithm_save">Save algorithm</string>
	<string name="algorithm_load">Load algorithm</string>
	<string name="visualize_PDF" translatable="false">PDF (or web)</string>
	<string name="visualize_TXT" translatable="false">TXT</string>
	<string name="challenge">Load challenge</string>

	<!-- send and receive stuff -->
	<string name="send_cube">Send Cube</string>
	<string name="receive_cube">Receive Cube</string>
	<string name="send_txt">Send TXT</string>
	<string name="receive_txt">Receive TXT</string>
	<string name="send_pdf">Send PDF</string>
	<string name="receive_pdf">Receive PDF</string>

	<!-- arrays -->
	<string-array name="faceLetter_array">
		<item>@string/Front_letter</item>
		<item>@string/Right_letter</item>
		<item>@string/Up_letter</item>
		<item>@string/Back_letter</item>
		<item>@string/Left_letter</item>
		<item>@string/Down_letter</item>
	</string-array>

	<string-array name="faceName_array">
		<item>@string/Front_name</item>
		<item>@string/Right_name</item>
		<item>@string/Up_name</item>
		<item>@string/Back_name</item>
		<item>@string/Left_name</item>
		<item>@string/Down_name</item>
	</string-array>

	<string-array name="colorName_array">
		<item>@string/red_name</item>
		<item>@string/blue_name</item>
		<item>@string/pink_name</item>
		<item>@string/orange_name</item>
		<item>@string/green_name</item>
		<item>@string/yellow_name</item>
	</string-array>

	<!-- help -->

	<string name="ask_help">ask help</string>
	<string name="help">
		Help for you:\n
		You are in a Rubik Cube learning activity OK?\n\n

		How to use the cube:\n
		- You can see 3 different little cubes up in the screen\n
		- them do not change never and i call this CUBE.\n
		- If u press F R U B L D buttons u do a MOVE Clockwise in the CUBE.\n
		- If u see a letter with \' after (like F\') that mean the move of the CUBE is ANTI-clockwise.\n
		- Center are always at the same GOOD place in the CUBE.\n
		- If u swap on the image u ROTATE the cube without modifying the CUBE, i call this SWAP-CUBE.\n
		- the SWAP-CUBE is drawn in the BIG image.\n
		That mean that if u have to ROTATE the cube then do an algorithm read in pdf\n
		u should see WHERE the F R U B L D face is right now in the SWAP-CUBE,\n
		then do the MOVE according to the COLOUR of the BUTTON,\n
		that ALWAYS indicates the center of the face.\n\n

		Auxiliary buttons:\n
		in menu there are 4 buttons:\n
		- Random: it do 10 random moves\n
		- Reset: it colour the cube back to the "clear" one.\n
		- Save: it let u save the last cube u used for long term uses\n
		    (do it before u clean the activity if u wish to restart from this cube).\n
		- Load: it let u re-load the last cube u saved.\n\n
		<!--You can also CHANGE CUBE COLORS if u prefer it, to adapt them to a real-life cube,
		or for personalize it in FUNNY ways…, but it may add difficulties to learning solving it.\n-->

		How to learn:\n
		in menu there are three buttons "visualize PDF", "import PDF" and "write your algorithm",\n
		have fun trying them :3\n

		have fun learning and playing!
	</string>


	<string name="action_settings" translatable="false">Settings</string>

	<string name="send_to">send to</string>

	<!-- import stuff -->
	<string name="search_uri">Copy or write URI here</string>
	<string name="refresh">refresh</string>
	<string name="download">download</string>
	<string name="download_correct">file downloaded correctly</string>
	<string name="import_new">import new</string>
	<string name="view_pdf">view pdf from extern app</string>

	<string name="google" translatable="false">Google</string>
	<string name="default_web" translatable="false">WIKI HOW</string>
	<string name="default_pdf" translatable="false">strata PDF</string>
	<string name="search_uri_button" translatable="false">URI button</string>

	<!-- external files management -->
	<string name="file_saved">file saved successfully</string>
	<string name="error_read_external_file">error read external file</string>
	<string name="error_write_external_file">error write external file</string>
</resources>